fix(challenges): Hide second scrollbar in challenge preview pane (#16737)
Closes #16695

--- a/common/app/routes/Challenges/challenges.less
+++ b/common/app/routes/Challenges/challenges.less
@@ -227,6 +227,7 @@
 .@{ns}-preview {
   .max-element-height();
   width: 100%;
+  overflow-y: hidden;
 }
 
 .@{ns}-preview-frame {
